Show page correctly on small screens

--- a/index.css
+++ b/index.css
@@ -20,11 +20,9 @@ body {
 }
 
 .container {
-    align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
+    padding: 20px;
+    max-width: 500px;
+    margin: auto;
 }
 
 .name {
